@@ -37,6 +37,7 @@ import de.viadee.bpm.vPAV.RuntimeConfig;
 import de.viadee.bpm.vPAV.config.model.Rule;
 import de.viadee.bpm.vPAV.constants.ConfigConstants;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
+import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
 import de.viadee.bpm.vPAV.processing.model.data.ProcessVariable;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -59,266 +60,273 @@ import static de.viadee.bpm.vPAV.processing.BpmnModelDispatcher.getProcessVariab
 
 public class ProcessVariableMappingTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = {classUrl};
-        ClassLoader cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-        RuntimeConfig.getInstance().setTest(true);
-        final Map<String, String> beanMapping = new HashMap<>();
-        beanMapping.put("mappingDelegate", "de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        RuntimeConfig.getInstance().setBeanMapping(beanMapping);
-    }
+	@BeforeClass
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		ClassLoader cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+		RuntimeConfig.getInstance().setTest(true);
+		final Map<String, String> beanMapping = new HashMap<>();
+		beanMapping.put("mappingDelegate", "de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		RuntimeConfig.getInstance().setBeanMapping(beanMapping);
+	}
 
-    /**
-     * Case: Test a model with Input Mapping of type text
-     * code
-     */
-    @Test
-    public void testInputTypeText() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Input Mapping of type text code
+	 */
+	@Test
+	public void testInputTypeText() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_InputText.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_InputText.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(2, processVariables.size());
-    }
+		Assert.assertEquals(2, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Input Mapping of type list
-     * code
-     */
-    @Test
-    public void testInputTypeList() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Input Mapping of type list code
+	 */
+	@Test
+	public void testInputTypeList() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_InputList.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_InputList.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(3, processVariables.size());
-    }
+		Assert.assertEquals(3, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Input Mapping of type map
-     * code
-     */
-    @Test
-    public void testInputTypeMap() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Input Mapping of type map code
+	 */
+	@Test
+	public void testInputTypeMap() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_InputMap.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_InputMap.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(3, processVariables.size());
-    }
+		Assert.assertEquals(3, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Output Mapping of type text
-     * code
-     */
-    @Test
-    public void testOutputTypeText() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Output Mapping of type text code
+	 */
+	@Test
+	public void testOutputTypeText() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputText.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputText.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(2, processVariables.size());
-    }
+		Assert.assertEquals(2, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Output Mapping of type list
-     * code
-     */
-    @Test
-    public void testOutputTypeList() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Output Mapping of type list code
+	 */
+	@Test
+	public void testOutputTypeList() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputList.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputList.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		scanner.scanProcessVariables();
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(3, processVariables.size());
-    }
+		Assert.assertEquals(3, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Output Mapping of type map
-     * code
-     */
-    @Test
-    public void testOutputTypeMap() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Output Mapping of type map code
+	 */
+	@Test
+	public void testOutputTypeMap() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputMap.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_OutputMap.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(3, processVariables.size());
-    }
+		Assert.assertEquals(3, processVariables.size());
+	}
 
-    /**
-     * Case: Test a model with Input Mapping of type text
-     * code
-     */
-    @Test
-    public void testInputTypeScript() throws IOException, SAXException, ParserConfigurationException {
+	/**
+	 * Case: Test a model with Input Mapping of type text code
+	 */
+	@Test
+	public void testInputTypeScript() throws IOException, SAXException, ParserConfigurationException {
 
-        final String PATH = BASE_PATH + "ProcessVariablesMapping_InputScript.bpmn";
-        final File processDefinition = new File(PATH);
-        final FileScanner fileScanner = new FileScanner(new HashMap<>(), ConfigConstants.TEST_JAVAPATH);
-        final Set<String> testSet = new HashSet<>();
-        testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
-        fileScanner.setJavaResourcesFileInputStream(testSet);
+		final String PATH = BASE_PATH + "ProcessVariablesMapping_InputScript.bpmn";
+		final File processDefinition = new File(PATH);
+		final FileScanner fileScanner = new FileScanner(new HashMap<>());
+		fileScanner.setScanPath(ConfigConstants.TEST_JAVAPATH);
+		final Set<String> testSet = new HashSet<>();
+		testSet.add("de/viadee/bpm/vPAV/delegates/MappingDelegate.java");
+		fileScanner.setJavaResourcesFileInputStream(testSet);
 
-        final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
-                fileScanner.getJavaResourcesFileInputStream());
+		final ProcessVariablesScanner scanner = new ProcessVariablesScanner(
+				fileScanner.getJavaResourcesFileInputStream());
 
-        scanner.scanProcessVariables();
+		scanner.scanProcessVariables();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processDefinition);
 
-        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
-        final Rule rule = new Rule("ProcessVariablesModelChecker", true, null, null, null, null);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+		final Rule rule = new Rule("ProcessVariablesModelChecker", true, null, null, null, null);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH), rule);
-        // create data flow graphs
-        graphBuilder.createProcessGraph(fileScanner, modelInstance,
-                processDefinition.getPath(), new ArrayList<>(), scanner);
+		final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH), rule);
+		// create data flow graphs
+		graphBuilder.createProcessGraph(fileScanner, modelInstance, processDefinition.getPath(), new ArrayList<>(),
+				scanner, new FlowAnalysis());
 
-        final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder);
-        final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
+		final Collection<BpmnElement> bpmnElements = getBpmnElements(processDefinition, baseElements, graphBuilder,
+				new FlowAnalysis());
+		final Collection<ProcessVariable> processVariables = getProcessVariables(bpmnElements);
 
-        Assert.assertEquals(1, processVariables.size());
-    }
+		Assert.assertEquals(1, processVariables.size());
+	}
 
 }
