@@ -37,6 +37,7 @@ import de.viadee.bpm.vPAV.config.model.Rule;
 import de.viadee.bpm.vPAV.config.model.Setting;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
 import de.viadee.bpm.vPAV.processing.code.flow.ControlFlowGraph;
+import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
 import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -59,144 +60,142 @@ import static org.junit.Assert.assertEquals;
 
 public class VersioningCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    private static ClassLoader cl;
+	private static ClassLoader cl;
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-    }
+	@BeforeClass
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+	}
 
-    /**
-     * Case: test versioning for java class
-     */
-    @Test
-    public void testJavaClassVersioning() {
-        final String PATH = BASE_PATH + "VersioningCheckerTest_JavaClassVersioning.bpmn";
+	/**
+	 * Case: test versioning for java class
+	 */
+	@Test
+	public void testJavaClassVersioning() {
+		final String PATH = BASE_PATH + "VersioningCheckerTest_JavaClassVersioning.bpmn";
 
-        final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
+		final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
 
-        // Versions
-        final Collection<String> resourcesNewestVersions = new ArrayList<String>();
-        resourcesNewestVersions.add("de/test/TestDelegate_1_2.class");
+		// Versions
+		final Collection<String> resourcesNewestVersions = new ArrayList<String>();
+		resourcesNewestVersions.add("de/test/TestDelegate_1_2.class");
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
 
-        final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
-        final Collection<CheckerIssue> issues = checker.check(element);
-        assertEquals(1, issues.size());
-    }
+		final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
+		final Collection<CheckerIssue> issues = checker.check(element);
+		assertEquals(1, issues.size());
+	}
 
-    /**
-     * Case: test versioning for directory based versioned java classes
-     */
-    @Test
-    public void testDirBasedJavaClassVersioning() {
-        final String PATH = BASE_PATH + "VersioningCheckerTest_DirBasedJavaClassVersioning.bpmn";
+	/**
+	 * Case: test versioning for directory based versioned java classes
+	 */
+	@Test
+	public void testDirBasedJavaClassVersioning() {
+		final String PATH = BASE_PATH + "VersioningCheckerTest_DirBasedJavaClassVersioning.bpmn";
 
-        final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
+		final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
 
-        FileScanner.setIsDirectory(true);
+		FileScanner.setIsDirectory(true);
 
-        // Versions
-        final Collection<String> resourcesNewestVersions = new ArrayList<String>();
+		// Versions
+		final Collection<String> resourcesNewestVersions = new ArrayList<String>();
 
-        resourcesNewestVersions.add("de\\viadee\\bpm\\v18_300\\test");
+		resourcesNewestVersions.add("de\\viadee\\bpm\\v18_300\\test");
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
+		final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
 
-        // parse bpmn model
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+		// parse bpmn model
+		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() != 1) {
-            Assert.fail("Model should generate exactly one issue");
-        }
+		if (issues.size() != 1) {
+			Assert.fail("Model should generate exactly one issue");
+		}
 
-    }
+	}
 
-    /**
-     * Case: test versioning for spring bean, with an outdated class reference
-     */
-    @Test
-    public void testBeanVersioningWithOutdatedClass() {
-        final String PATH = BASE_PATH + "VersioningCheckerTest_BeanVersioningOutdatedClass.bpmn";
+	/**
+	 * Case: test versioning for spring bean, with an outdated class reference
+	 */
+	@Test
+	public void testBeanVersioningWithOutdatedClass() {
+		final String PATH = BASE_PATH + "VersioningCheckerTest_BeanVersioningOutdatedClass.bpmn";
 
-        final Map<String, Setting> settings = new HashMap<String, Setting>();
-        settings.put("versioningSchemaClass",
-                new Setting("versioningSchemaClass", null, null, null, false,
-                        "([^_]*)_{1}([0-9][_][0-9]{1})\\.(java|groovy)"));
+		final Map<String, Setting> settings = new HashMap<String, Setting>();
+		settings.put("versioningSchemaClass", new Setting("versioningSchemaClass", null, null, null, false,
+				"([^_]*)_{1}([0-9][_][0-9]{1})\\.(java|groovy)"));
 
-        final Rule rule = new Rule("VersioningChecker", true, null, settings, null, null);
+		final Rule rule = new Rule("VersioningChecker", true, null, settings, null, null);
 
-        // Versions
-        final Collection<String> resourcesNewestVersions = new ArrayList<String>();
-        resourcesNewestVersions.add("de/test/TestDelegate_1_2.java");
+		// Versions
+		final Collection<String> resourcesNewestVersions = new ArrayList<String>();
+		resourcesNewestVersions.add("de/test/TestDelegate_1_2.java");
 
-        // Bean-Mapping
-        final Map<String, String> beanMapping = new HashMap<String, String>();
-        beanMapping.put("myBean_1_1", "de.test.TestDelegate_1_1");
-        RuntimeConfig.getInstance().setBeanMapping(beanMapping);
+		// Bean-Mapping
+		final Map<String, String> beanMapping = new HashMap<String, String>();
+		beanMapping.put("myBean_1_1", "de.test.TestDelegate_1_1");
+		RuntimeConfig.getInstance().setBeanMapping(beanMapping);
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
 
-        final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
-        final Collection<CheckerIssue> issues = checker.check(element);
-        assertEquals(1, issues.size());
-    }
+		final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
+		final Collection<CheckerIssue> issues = checker.check(element);
+		assertEquals(1, issues.size());
+	}
 
-    /**
-     * Case: test versioning for script
-     */
-    @Test
-    public void testScriptVersioning() {
-        final String PATH = BASE_PATH + "VersioningCheckerTest_ScriptVersioning.bpmn";
+	/**
+	 * Case: test versioning for script
+	 */
+	@Test
+	public void testScriptVersioning() {
+		final String PATH = BASE_PATH + "VersioningCheckerTest_ScriptVersioning.bpmn";
 
-        final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
+		final Rule rule = new Rule("VersioningChecker", true, null, null, null, null);
 
-        // Versions
-        final Collection<String> resourcesNewestVersions = new ArrayList<String>();
-        resourcesNewestVersions.add("de/test/testScript_1_2.groovy");
+		// Versions
+		final Collection<String> resourcesNewestVersions = new ArrayList<String>();
+		resourcesNewestVersions.add("de/test/testScript_1_2.groovy");
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
 
-        final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
-        final Collection<CheckerIssue> issues = checker.check(element);
-        assertEquals(1, issues.size());
-    }
+		final ElementChecker checker = new VersioningChecker(rule, null, resourcesNewestVersions);
+		final Collection<CheckerIssue> issues = checker.check(element);
+		assertEquals(1, issues.size());
+	}
 }
